--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     <a class="underline" href="" style="text-decoration: none;">
                                         <div>
                                             <div class="align-flex text-black" style="gap: 12px;">
-                                                <img src="./images/img/car-front-outlined.svg"
+                                                <img src="file:///C:/Users/VivekVinayakAbhale/Desktop/MEAN%20stack%20training/javascript.html/responsivefoodwebsite/images/img/Rider_Home_bg_desktop2x.webp"
                                                     style="border: 1px solid black;" alt="">
                                                 <span style="font-size: 14px;">Ride</span>
 
