--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     <a class="underline" href="" style="text-decoration: none;">
                                         <div>
                                             <div class="align-flex text-black" style="gap: 12px;">
-                                                <img src="file:///C:/Users/VivekVinayakAbhale/Desktop/MEAN%20stack%20training/javascript.html/responsivefoodwebsite/images/img/Rider_Home_bg_desktop2x.webp"
+                                                <img src="https://www.uber-assets.com/image/upload/f_auto,q_auto:eco,c_fill,w_1519,h_854/v1613521717/assets/7a/fd8982-6884-49b9-bb5f-28e6ff2cc0e8/original/Rider_Home_bg_tablet.png"
                                                     style="border: 1px solid black;" alt="">
                                                 <span style="font-size: 14px;">Ride</span>
 
